<resources>
    <string name="app_name">My Application</string>
    <string name="price">Car Price</string>
    <string name="downPayment">Down Payment Amount</string>
    <string name="loanPeriod">Loan Period</string>
    <string name="interestRate">Interest Rate</string>
    <string name="title">After Calculation</string>
    <string name="carLoan">Car Loan</string>
    <string name="interest">Interest</string>
    <string name="monthlyRepay">Monthly Repayment</string>
    <string name="submit">Calculate</string>
</resources>
